chenged class name  from wishlist on user-card__list

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
       <span class="user-card__level-img" aria-label="уровень">99 level</span>
       <div class="user-card__wrapper">
         <h4 class="visually-hidden">хочет посетить:</h4>
-        <ul class="wishlist">
-          <li class="wishlist__item">
-            <img class="wishlist__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг США">
+        <ul class="user-card__list">
+          <li class="user-card__item">
+            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг США">
           </li>
-          <li class="wishlist__item">
-            <img class="wishlist__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Австралии">
+          <li class="user-card__item">
+            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Австралии">
           </li>
-          <li class="wishlist__item">
-            <img class="wishlist__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Доминиканы">
+          <li class="user-card__item">
+            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Доминиканы">
           </li>
         </ul>
       </div>
@@ -147,12 +147,12 @@
       <span class="user-card__level-img" aria-label="уровень">80 level</span>
       <div class="user-card_wrapper">
         <h4 class="visually-hidden">хочет посетить:</h4>
-        <ul class="wishlist">
-          <li class="wishlist__item">
-            <img class="wishlist__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Бельгии">
+        <ul class="user-card__list">
+          <li class="user-card__item">
+            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Бельгии">
           </li>
-          <li class="wishlist__item">
-            <img class="wishlist__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Чехии">
+          <li class="user-card__item">
+            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Чехии">
           </li>
         </ul>
       </div>
