--- a/catalog.html
+++ b/catalog.html
@@ -29,11 +29,11 @@
       <span class="user-card__remoteness" aria-label="Удаленность">1,5 м</span>
       <p class="user-card__hash-tag">#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
       <div class="user-card__wrapper">
-        <h4 class="user-card__wishlist">хочет посетить:</h4>
-        <ul class="wishlist">
-          <li class="wishlist__item">Шри-ланка</li>
-          <li class="wishlist__item">Тайланд</li>
-          <li class="wishlist__item">Сейшелы</li>
+        <h4 class="user-card__title">хочет посетить:</h4>
+        <ul class="user-card__list">
+          <li class="user-card__item">Шри-ланка</li>
+          <li class="user-card__item">Тайланд</li>
+          <li class="user-card__item">Сейшелы</li>
         </ul>
       </div>
       <div class="user-card__wrapper">
@@ -71,10 +71,10 @@
       <span class="user-card__remoteness" aria-label="Удаленность">1500</span>
       <p class="user-card__hash-tag">#бургер #бар #футбол #концерт #крафт</p>
       <div class="user-card__wrapper">
-        <h4 class="user-card__wishlist">хочет посетить:</h4>
-        <ul class="wishlist">
-          <li class="wishlist__item">Бельгия</li>
-          <li class="wishlist__item">Чехия</li>
+        <h4 class="user-card__title">хочет посетить:</h4>
+        <ul class="user-card__list">
+          <li class="user-card__item">Бельгия</li>
+          <li class="user-card__item">Чехия</li>
         </ul>
       </div>
       <div class="user-card_wrapper">
@@ -112,11 +112,11 @@
       <span class="user-card__remoteness" aria-label="Удаленность">1,5 м</span>
       <p class="user-card__hash-tag">#рэп #тату #хайпбист #кроссовки #суприм</p>
       <div class="user-card_wrapper">
-        <h4 class="user-card__wishlist">хочет посетить:</h4>
-        <ul class="wishlist">
-          <li class="wishlist__item">США</li>
-          <li class="wishlist__item">Австраалия</li>
-          <li class="wishlist__item">Доминика</li>
+        <h4 class="user-card__title">хочет посетить:</h4>
+        <ul class="user-card__list">
+          <li class="user-card__item">США</li>
+          <li class="user-card__item">Австраалия</li>
+          <li class="user-card__item">Доминика</li>
         </ul>
       </div>
       <div class="user-card__wrapper">
@@ -154,11 +154,11 @@
       <span class="user-card__remoteness" aria-label="Удаленность">1,5 м</span>
       <p class="user-card__hash-tag">#рэп #тату #хайпбист #кроссовки #суприм</p>
       <div class="user-card_wrapper">
-        <h4 class="user-card__wishlist">хочет посетить:</h4>
-        <ul class="wishlist">
-          <li class="wishlist__item">США</li>
-          <li class="wishlist__item">Австралия</li>
-          <li class="wishlist__item">Доминика</li>
+        <h4 class="user-card__title">хочет посетить:</h4>
+        <ul class="user-card__list">
+          <li class="user-card__item">США</li>
+          <li class="user-card__item">Австралия</li>
+          <li class="user-card__item">Доминика</li>
         </ul>
       </div>
       <div class="user-card__wrapper">
