changed class name from user-card__img to user-card__list--img

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
         <h4 class="visually-hidden">хочет посетить:</h4>
         <ul class="user-card__list">
           <li class="user-card__item">
-            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг США">
+            <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг США">
           </li>
           <li class="user-card__item">
-            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Австралии">
+            <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Австралии">
           </li>
           <li class="user-card__item">
-            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Доминиканы">
+            <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Доминиканы">
           </li>
         </ul>
       </div>
@@ -149,10 +149,10 @@
         <h4 class="visually-hidden">хочет посетить:</h4>
         <ul class="user-card__list">
           <li class="user-card__item">
-            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Бельгии">
+            <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Бельгии">
           </li>
           <li class="user-card__item">
-            <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Чехии">
+            <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Чехии">
           </li>
         </ul>
       </div>
