changed class name from user-card__img to user-card__list--img

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 
     <div class="user-card">
-      <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="Таня Фирсова">
+      <img class="user" src="https://via.placeholder.com/" width="40" height="40" alt="Таня Фирсова">
       <span class="user-card__level-img" aria-label="уровень">99 level</span>
       <div class="user-card__wrapper">
         <h4 class="visually-hidden">хочет посетить:</h4>
