added span for icon

--- a/form.html
+++ b/form.html
@@ -26,22 +26,26 @@
 <footer class="footer">
   <a class="logo logo--footer" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
+    <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <div class="footer__social social">
     <ul class="social__list">
       <li class="social__item">
         <a class="social__link social__link--facebook" href="https://www.facebook.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Фейсбук">
+          <span class="visually-hidden">Фейсбук</span>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--vkontakte" href="https://vk.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Вконтакте">
+          <span class="visually-hidden">Вконтакте</span>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--instagram" href="https://www.instagram.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Инстаграмм">
+          <span class="visually-hidden">Инстаграмм</span>
         </a>
       </li>
     </ul>
@@ -50,6 +54,7 @@
     <b class="copyright__text">Разработано:</b>
     <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
       <img class="copyright__img" src="https://via.placeholder.com/" width="40" height="40" alt="Сайт HTML Academy">
+      <span class="visually-hidden">Сайт HTML Academy</span>
     </a>
   </div>
 </footer>
