--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 <header class="header">
   <a class="logo logo--header">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
+    <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <button class="header__toggle" type="button">
     <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40" alt="Открыть меню">
+    <span class="visually-hidden">Открыть меню</span>
   </button>
   <h1 class="header__title">В путешествие с крутыми попутчиками!</h1>
   <nav class="main-nav">
     <a class="main-nav__tel" href="tel:+749511111111">
       <img class="main-nav__tel-img" src="https://via.placeholder.com/" width="40" height="40" alt="Наш телефон">
+      <span class="visually-hidden">Наш телефон</span>
     </a>
     <a class="main-nav__mail" href="mailto:oxana3@mail.ru subject=Напишите нам">
       <img class="main-nav__mail-img" src="https://via.placeholder.com/" width="40" height="40"
            alt="Наша электронная почта">
+      <span class="visually-hidden">Наша электронная почта</span>
     </a>
     <a class="main-nav__login js-login" href="#">Авторизация</a>
   </nav>
 </header>
 
-<main class="main">
+<main>
   <section class="blockquote">
     <h2 class="visually-hidden">Отзывы</h2>
     <blockquote class="blockquote__review">
@@ -101,19 +105,22 @@
     </div>
 
     <div class="user-card">
-      <img class="user" src="https://via.placeholder.com/" width="40" height="40" alt="Таня Фирсова">
+      <img class="user-card__img" src="https://via.placeholder.com/" width="40" height="40" alt="Таня Фирсова">
       <span class="user-card__level-img" aria-label="уровень">99 level</span>
       <div class="user-card__wrapper">
         <h4 class="visually-hidden">хочет посетить:</h4>
         <ul class="user-card__list">
           <li class="user-card__item">
             <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг США">
+            <span class="visually-hidden">флаг США</span>
           </li>
           <li class="user-card__item">
             <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Австралии">
+            <span class="visually-hidden">флаг Австралии</span>
           </li>
           <li class="user-card__item">
             <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Доминиканы">
+            <span class="visually-hidden">флаг Доминиканы</span>
           </li>
         </ul>
       </div>
@@ -125,18 +132,22 @@
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
+            <span class="visually-hidden">Самолет</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
                  height="40" alt="автобус">
+            <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
+            <span class="visually-hidden">Велосипед</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
                  height="40" alt="пешком">
+            <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
@@ -150,9 +161,11 @@
         <ul class="user-card__list">
           <li class="user-card__item">
             <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Бельгии">
+            <span class="visually-hidden">Флаг Бельгии</span>
           </li>
           <li class="user-card__item">
             <img class="user-card__list-img" src="https://via.placeholder.com/" width="40" height="40" alt="флаг Чехии">
+            <span class="visually-hidden">флаг Чехии</span>
           </li>
         </ul>
       </div>
@@ -164,18 +177,22 @@
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
+            <span class="visually-hidden">Самолет</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bus transport__img--bus--active"
-                 src="https://via.placeholder.com/" width="40" height="40" alt="автобус">
+            <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
+                 height="40" alt="автобус">
+            <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle" src="https://via.placeholder.com/" width="40"
-                 height="40" alt="велосипед">
+            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+                 src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
+            <span class="visually-hidden">Велосипед</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--on-foot transport__img--on-foot--active"
-                 src="https://via.placeholder.com/" width="40" height="40" alt="пешком">
+            <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
+                 height="40" alt="пешком">
+            <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
@@ -212,22 +229,26 @@
 <footer class="footer">
   <a class="logo logo--footer ">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
+    <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <div class="footer__social social">
     <ul class="social__list">
       <li class="social__item">
         <a class="social__link social__link--facebook" href="https://www.facebook.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Фейсбук">
+          <span class="visually-hidden">Фейсбук</span>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--vkontakte" href="https://vk.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Вконтакте">
+          <span class="visually-hidden">Вконтакте</span>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--instagram" href="https://www.instagram.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Инстаграмм">
+          <span class="visually-hidden">Инстаграмм</span>
         </a>
       </li>
     </ul>
@@ -236,6 +257,7 @@
     <b class="copyright__text">Разработано:</b>
     <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
       <img class="copyright__img" src="https://via.placeholder.com/" width="40" height="40" alt="Сайт HTML Academy">
+      <span class="visually-hidden">Сайт HTML Academy</span>
     </a>
   </div>
 </footer>
