--- a/catalog.html
+++ b/catalog.html
@@ -40,20 +40,24 @@
         <h4 class="user-card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport-list__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
+            <span class="visually-hidden">Самолет</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
                  height="40" alt="автобус">
+            <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle" src="https://via.placeholder.com/" width="40"
-                 height="40" alt="велосипед">
+            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+                 src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
+            <span class="visually-hidden">Велосипед</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
                  height="40" alt="пешком">
+            <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
@@ -81,20 +85,24 @@
         <h4 class="user-card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport-list__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
+            <span class="visually-hidden">Самолет</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bus transport-list__img--bus--active"
-                 src="https://via.placeholder.com/" width="40" height="40" alt="автобус">
+            <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
+                 height="40" alt="автобус">
+            <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle" src="https://via.placeholder.com/" width="40"
-                 height="40" alt="велосипед">
+            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
+                 src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
+            <span class="visually-hidden">Велосипед</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--on-foot transport-list__img--on-foot--active"
-                 src="https://via.placeholder.com/" width="40" height="40" alt="пешком">
+            <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
+                 height="40" alt="пешком">
+            <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
@@ -123,20 +131,24 @@
         <h4 class="user-card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport-list__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
+            <span class="visually-hidden">Самолет</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
                  height="40" alt="автобус">
+            <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle transport-list__img--bicycle--active"
+            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
+            <span class="visually-hidden">Велосипед</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
                  height="40" alt="пешком">
+            <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
@@ -165,20 +177,24 @@
         <h4 class="user-card__transport">транспорт:</h4>
         <ul class="transport-list">
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--plane transport-list__img--plane--active"
+            <img class="transport-list__img transport-list__img--plane transport__img--plane--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="самолет">
+            <span class="visually-hidden">Самолет</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--bus" src="https://via.placeholder.com/" width="40"
                  height="40" alt="автобус">
+            <span class="visually-hidden">Автобус</span>
           </li>
           <li class="transport-list__item">
-            <img class="transport-list__img transport-list__img--bicycle transport-list__img--bicycle--active"
+            <img class="transport-list__img transport-list__img--bicycle transport__img--bicycle--active"
                  src="https://via.placeholder.com/" width="40" height="40" alt="велосипед">
+            <span class="visually-hidden">Велосипед</span>
           </li>
           <li class="transport-list__item">
             <img class="transport-list__img transport-list__img--on-foot" src="https://via.placeholder.com/" width="40"
                  height="40" alt="пешком">
+            <span class="visually-hidden">Пешком</span>
           </li>
         </ul>
       </div>
@@ -201,22 +217,26 @@
 <footer class="footer">
   <a class="logo logo--footer" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
+    <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <div class="footer__social social">
     <ul class="social__list">
       <li class="social__item">
         <a class="social__link social__link--facebook" href="https://www.facebook.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Фейсбук">
+          <span class="visually-hidden">Фейсбук</span>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--vkontakte" href="https://vk.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Вконтакте">
+          <span class="visually-hidden">Вконтакте</span>
         </a>
       </li>
       <li class="social__item">
         <a class="social__link social__link--instagram" href="https://www.instagram.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Инстаграмм">
+          <span class="visually-hidden">Инстаграмм</span>
         </a>
       </li>
     </ul>
@@ -225,6 +245,7 @@
     <b class="copyright__text">Разработано:</b>
     <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
       <img class="copyright__img" src="https://via.placeholder.com/" width="40" height="40" alt="Сайт HTML Academy">
+      <span class="visually-hidden">Сайт HTML Academy</span>
     </a>
   </div>
 </footer>
