changed classes for modificator of social__link

--- a/form.html
+++ b/form.html
@@ -10,9 +10,11 @@
 <header class="header">
   <a class="logo logo__header" href="index.html">
     <img class="logo__img" src="https://via.placeholder.com/" width="40" height="40" alt="Логотип Погнали?">
+    <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <button class="header__toggle" type="button">
     <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40" alt="Открыть меню">
+    <span class="visually-hidden">Открыть меню</span>
   </button>
   <h1 class="header__title">Направления</h1>
 </header>
@@ -31,19 +33,19 @@
   <div class="footer__social social">
     <ul class="social__list">
       <li class="social__item">
-        <a class="social__link social__link--facebook" href="https://www.facebook.com">
+        <a class="social__link social__link--fb" href="https://www.facebook.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Фейсбук">
           <span class="visually-hidden">Фейсбук</span>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link social__link--vkontakte" href="https://vk.com">
+        <a class="social__link social__link--vk" href="https://vk.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Вконтакте">
           <span class="visually-hidden">Вконтакте</span>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link social__link--instagram" href="https://www.instagram.com">
+        <a class="social__link social__link--inst" href="https://www.instagram.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40" height="40" alt="Инстаграмм">
           <span class="visually-hidden">Инстаграмм</span>
         </a>
