added arial-label for .main-nav classes and changed .user-card button from button to link

--- a/catalog.html
+++ b/catalog.html
@@ -67,7 +67,7 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">99</span>
       </div>
-      <button class="button user-card__button" type="button">Позвать!</button>
+      <a class="user-card__link" href="#">Позвать!</a>
     </div>
 
     <div class="user-card">
@@ -112,7 +112,7 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">80</span>
       </div>
-      <button class="button user-card__button" type="button">Позвать!</button>
+      <a class="user-card__link" href="#">Позвать!</a>
     </div>
 
     <div class="user-card">
@@ -158,7 +158,7 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">25</span>
       </div>
-      <button class="button user-card__button" type="button">Позвать!</button>
+      <a class="user-card__link" href="#">Позвать!</a>
     </div>
 
     <div class="user-card">
@@ -204,7 +204,7 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">50</span>
       </div>
-      <button class="button user-card__button" type="button">Позвать!</button>
+      <a class="user-card__link" href="#">Позвать!</a>
     </div>
 
     <a class="user-cards__link" href="#">Показать еще</a>
