--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </button>
   <h1 class="header__title">В путешествие с крутыми попутчиками!</h1>
   <nav class="main-nav">
-    <a class="main-nav__tel" href="tel:+749511111111">
+    <a class="main-nav__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
       <img class="main-nav__tel-img" src="https://via.placeholder.com/" width="40" height="40" alt="Наш телефон">
       <span class="visually-hidden">Наш телефон</span>
     </a>
-    <a class="main-nav__mail" href="mailto:oxana3@mail.ru subject=Напишите нам">
+    <a class="main-nav__mail" href="mailto:go@gmail.com" aria-label="Электронный адрес go@gmail.com">
       <img class="main-nav__mail-img" src="https://via.placeholder.com/" width="40" height="40"
            alt="Наша электронная почта">
       <span class="visually-hidden">Наша электронная почта</span>
