--- a/form.html
+++ b/form.html
@@ -13,14 +13,47 @@
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <button class="header__toggle" type="button">
-    <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40" alt="Открыть меню">
-    <span class="visually-hidden">Открыть меню</span>
+    <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40"
+         alt="Открыть или закрыть меню">
+    <span class="visually-hidden">Открыть или закрыть меню</span>
   </button>
-  <h1 class="header__title">Направления</h1>
+
+  <section class="menu-nav">
+    <ul class="site-nav">
+      <li class="site-nav__item">
+        <a class="site-nav-link" href="#">О сервисе</a>
+      </li>
+      <li class="site-nav__item">
+        <a class="site-nav-link" href="form.html">Направления</a>
+      </li>
+      <li class="site-nav__item">
+        <a class="site-nav-link" href="catalog.html">Попутчики</a>
+      </li>
+    </ul>
+    <ul class="user-nav__list user-nav__list--menu-nav">
+      <li class="user-nav__item">
+        <a class="user-nav__login js-login" href="#">Авторизация</a>
+      </li>
+      <li class="user-nav__item">
+        <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
+          <img class="user-nav__list__tel-img" src="https://via.placeholder.com/" width="40" height="40"
+               alt="Наш телефон">
+          <span class="visually-hidden">Наш телефон</span>
+        </a>
+      </li>
+      <li class="user-nav__item">
+        <a class="user-nav__list__mail" href="mailto:go@gmail.com" aria-label="Электронный адрес go@gmail.com">
+          <img class="user-nav__mail-img" src="https://via.placeholder.com/" width="40" height="40"
+               alt="Наша электронная почта">
+          <span class="visually-hidden">Наша электронная почта</span>
+        </a>
+      </li>
+    </ul>
+  </section>
 </header>
 
 <main>
-
+  <h1 class="header__title">Направления</h1>
 /*Пропущены красные блоки*/
 
 </main>
