changed block rewiews to pagination

--- a/catalog.html
+++ b/catalog.html
@@ -246,10 +246,10 @@
 
     <a class="user-cards__link" href="#">Показать еще</a>
 
-    <div class="reviews">
-      <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-      <button class="reviews__next" type="button">Следующий отзыв</button>
-    </div>
+    <section class="pagination">
+      <a class="pagination__control pagination__control--back>Предыдущая страница</button>
+      <a class="pagination__control pagination__control--next>Следующая страница</a>
+    </section>
   </div>
 </main>
 
