added class button for links, changed two lists on ol lists at index page

--- a/catalog.html
+++ b/catalog.html
@@ -13,10 +13,6 @@
     <span class="visually-hidden">Логотип Погнали?</span>
   </a>
   <button class="header__toggle" type="button">
-    <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40" alt="Открыть меню">
-    <span class="visually-hidden">Логотип Погнали?</span>
-  </button>
-  <button class="header__toggle" type="button">
     <img class="header__toggle__img" src="https://via.placeholder.com/" width="40" height="40"
          alt="Открыть или закрыть меню">
     <span class="visually-hidden">Открыть или закрыть меню</span>
@@ -36,7 +32,7 @@
     </ul>
     <ul class="user-nav__list user-nav__list--menu-nav">
       <li class="user-nav__item">
-        <a class="user-nav__login js-login" href="#">Авторизация</a>
+        <a class="button user-nav__button js-login" href="#">Авторизация</a>
       </li>
       <li class="user-nav__item">
         <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
@@ -104,7 +100,7 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">99</span>
       </div>
-      <a class="user-card__link" href="#">Позвать!</a>
+      <a class="button user-card__button" href="#">Позвать!</a>
     </div>
 
     <div class="user-card">
@@ -149,7 +145,7 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">80</span>
       </div>
-      <a class="user-card__link" href="#">Позвать!</a>
+      <a class="button user-card__button" href="#">Позвать!</a>
     </div>
 
     <div class="user-card">
@@ -195,7 +191,7 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">25</span>
       </div>
-      <a class="user-card__link" href="#">Позвать!</a>
+      <a class="button user-card__button" href="#">Позвать!</a>
     </div>
 
     <div class="user-card">
@@ -241,13 +237,13 @@
         <h4 class="user-card__level">левел:</h4>
         <span class="user-card__level-img" aria-label="уровень">50</span>
       </div>
-      <a class="user-card__link" href="#">Позвать!</a>
+      <a class="button user-card__button" href="#">Позвать!</a>
     </div>
 
     <a class="user-cards__link" href="#">Показать еще</a>
 
     <section class="pagination">
-      <a class="pagination__control pagination__control--back>Предыдущая страница</button>
+      <a class="pagination__control pagination__control--back>Предыдущая страница</a>
       <a class="pagination__control pagination__control--next>Следующая страница</a>
     </section>
   </div>
