--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
     </ul>
     <ul class="user-nav__list user-nav__list--menu-nav">
       <li class="user-nav__item">
-        <a class="user-nav__login js-login" href="#">Авторизация</a>
+        <a class="button user-nav__button js-login" href="#">Авторизация</a>
       </li>
       <li class="user-nav__item">
         <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
