--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
     <ul class="user-nav__list user-nav__list--menu-nav">
       <li class="user-nav__item">
-        <a class="user-nav__login js-login" href="#">Авторизация</a>
+        <a class="button user-nav__button js-login" href="#">Авторизация</a>
       </li>
       <li class="user-nav__item">
         <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
@@ -58,7 +58,7 @@
     <nav class="user-nav">
       <ul class="user-nav__list user-nav__list--main-nav">
         <li class="user-nav__item">
-          <a class="user-nav__login js-login" href="#">Авторизация</a>
+          <a class="button user-nav__button js-login" href="#">Авторизация</a>
         </li>
         <li class="user-nav__item">
           <a class="user-nav__list__tel" href="tel:+749511111111" aria-label="Телефон +749511111111">
@@ -87,24 +87,12 @@
 
   <section class="sequencing">
     <h2 class="visually-hidden">Последовательность действий</h2>
-    <ul class="sequencing__list">
-      <li class="sequencing__item">
-        <span>Выберите направление</span>
-        <span>1</span>
-      </li>
-      <li class="sequencing__item">
-        <span>Изучите идеи <br> путешественников</span>
-        <span>2</span>
-      </li>
-      <li class="sequencing__item">
-        <span>Находите тех, <br> кто похож на вас</span>
-        <span>3</span>
-      </li>
-      <li class="sequencing__item">
-        <span>Путешествуйте <br> вместе!</span>
-        <span>4</span>
-      </li>
-    </ul>
+    <ol class="sequencing__list">
+      <li class="sequencing__item">Выберите направление</li>
+      <li class="sequencing__item">Изучите идеи <br> путешественников</li>
+      <li class="sequencing__item">Находите тех, <br> кто похож на вас</li>
+      <li class="sequencing__item">Путешествуйте <br> вместе!</li>
+    </ol>
   </section>
 
   <section class="about-service">
@@ -250,23 +238,20 @@
 
   <section class="rates">
     <h2 class="rates__title">Добавьте свой профиль</h2>
-    <ul class="rates-list">
+    <ol class="rates-list">
       <li class="rates-list__item">
         <h4>Базовое размещение Бесплатно</h4>
-        <span>1</span>
         <span>Бесплатно</span>
       </li>
       <li class="rates-list__item">
         <h4>Вывод на первых позициях</h4>
-        <span>2</span>
         <span>99 руб./мес</span>
       </li>
       <li class="rates-list__item">
         <h4>Кастомный цвет карточки</h4>
-        <span>3</span>
         <span>59 руб./мес</span>
       </li>
-    </ul>
+    </ol>
     <a class="rates__link" href="#">Показать тарифы для бизнеса</a>
   </section>
 
